123/MyProject/src/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <picklist>
            <picklistValues>
                <fullName>1234567890</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0987654321</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <picklist>
            <picklistValues>
                <fullName>Rina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHOK</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Closing_Date__c</fullName>
        <label>Course Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Duration__c</fullName>
        <formula>Course_Closing_Date__c  -  Course_Starting_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Intake_Strength__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Course Intake Strength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <picklist>
            <picklistValues>
                <fullName>Core Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Financials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle ADF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoken English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personality Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tailoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yoga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tally ERP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Starting_Date__c</fullName>
        <label>Course Starting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Timings__c</fullName>
        <label>Course Timings</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM-9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM-11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM-3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM-5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM-9:00 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <picklist>
            <picklistValues>
                <fullName>Rajendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sateesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srinu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Srujana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHOK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_Strength__c</fullName>
        <label>Registered Strength</label>
        <summaryForeignKey>Student__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C Id-{0000}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>